# wavekat-lab

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: README.md  ci.yml  cv-deploy.yml  cv-runner-provision.yml  cv-sync.yml  release-please.yml
backend/: Cargo.toml
backend/src/: main.rs  pipeline.rs  ws.rs
docs/: 01-plan-general-lab.md  02-plan-turn-detection.md  03-plan-pipeline-mode.md  04-plan-cv-dataset-explorer.md  plan-cv-dataset-explorer.md  plan-general-lab.md  plan-pipeline-mode.md  plan-turn-detection.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: ConfigPanel.tsx  PipelineConfigPanel.tsx  PipelineTimeline.tsx  TurnConfigPanel.tsx  TurnTimeline.tsx  VadTimeline.tsx
frontend/src/lib/: websocket.ts
notebooks/: CLAUDE.md  README.md
notebooks/smart-turn/: 01_load_export.ipynb  02_a_train_baseline.ipynb  02_b_train_specaugment.ipynb  02_c_zero_shot_upstream.ipynb  02_train.ipynb  03_compare.ipynb  03_eval.ipynb  04_export.ipynb  README.md  smart_turn.py
notebooks/smart-turn-mining/: 01_parse_ramc.ipynb  02_vad_full_sessions.ipynb  03_build_candidates.ipynb  04_score_own_model.ipynb  04b_score_pipecat.ipynb  05_score_llm.ipynb  06_b_upload_uncertainty_to_platform.ipynb  06_c_upload_high_confidence.ipynb  06_upload_to_platform.ipynb
notebooks/smart-turn/docs/: 01-measurement.md  02-more-data.md  02-warmstart.md  03-magicdata-ramc-mining.md  03-tts-synthesis.md  04-0501-0502-models.md  MISSION.md  README.md
tools/audio-lab/: Makefile  README.md
tools/audio-lab/backend/: Cargo.toml
tools/audio-lab/backend/src/: main.rs  pipeline.rs  ws.rs
tools/audio-lab/frontend/: index.html  package-lock.json  package.json
tools/cv-explorer/: .env.example  Makefile  README.md
tools/cv-explorer/docs/: auth-implementation.md
tools/cv-explorer/scripts/: package-lock.json  package.json  sync.ts
tools/cv-explorer/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tools/cv-explorer/web/src/: App.tsx  index.css
tools/cv-explorer/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
tools/cv-explorer/worker/migrations/: 0001_init.sql  0002_auth.sql
tools/lab/backend/: Cargo.toml
tools/lab/frontend/: package.json
tools/vad-lab/: README.md
tools/vad-lab/backend/: Cargo.toml
tools/vad-lab/frontend/: package.json
(+27 files in other folders)
