[package]
name = "lab"
version = "0.0.8" # x-release-please-version
edition = "2021"

[dependencies]
wavekat-vad = { version = "0.1", features = [
    "webrtc",
    "silero",
    "denoise",
    "ten-vad",
    "firered",
    "serde",
] }
wavekat-turn = { version = "0.0.6", features = ["pipecat"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
cpal = "0.16"
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
mime_guess = "2"
rustfft = "6"
rubato = "0.16"
